src/shell/snapshots/mise__shell__fish__tests__activate.snap
---
source: src/shell/fish.rs
expression: fish.activate(opts)
---
set -gx MISE_SHELL fish
if not set -q __MISE_ORIG_PATH
    set -gx __MISE_ORIG_PATH $PATH
end

function mise
  set -l command ''
  if test (count $argv) -gt 0
    set command $argv[1]
    set -e argv[1]
  end

  switch "$command"
  case deactivate shell sh
    if not contains -- -h $argv; and not contains -- --help $argv
      source (command /some/dir/mise "$command" $argv |psub)
      return $status
    end
  end
  if set -q __MISE_LOOKUP_ERROR
    echo $__MISE_LOOKUP_ERROR >&2
    return 127
  end
  set -l target /some/dir/mise
  if set -q __MISE_LOOKUP_EXE
    set target $__MISE_LOOKUP_EXE
    if not test -f "$target"
      echo "mise: selected executable disappeared: $target" >&2
      return 127
    end
  end
  if test -n "$command"
    command "$target" "$command" $argv
  else
    command "$target" $argv
  end
end

function __mise_env_eval --description 'Update mise environment when changing directories';
    /some/dir/mise hook-env --status --shell-pid $fish_pid -s fish $argv | source;

    if test "$mise_fish_mode" != "disable_arrow";
        function __mise_cd_hook --on-variable PWD --description 'Update mise environment when changing directories';
            if test "$mise_fish_mode" = "eval_after_arrow";
                set -g __mise_env_again 0;
            else;
                /some/dir/mise hook-env --status --shell-pid $fish_pid -s fish | source;
            end;
        end;
    end;
end;

function __mise_env_eval_on_prompt --on-event fish_prompt --description 'Update mise environment when changing directories';
    if set -q __mise_skip_first_prompt_pwd;
        set -l activate_pwd "$__mise_skip_first_prompt_pwd";
        set -e __mise_skip_first_prompt_pwd;
        if test "$PWD" = "$activate_pwd";
            return;
        end;
    end;

    __mise_env_eval;
end;

function __mise_env_eval_2 --on-event fish_preexec --description 'Update mise environment when changing directories';
    if set -q __mise_env_again;
        set -e __mise_env_again;
        /some/dir/mise hook-env --status --shell-pid $fish_pid -s fish | source;
        echo;
    end;

    if test "$mise_fish_mode" = "eval_after_arrow";
        functions --erase __mise_cd_hook;
    end;
end;

__mise_env_eval --force
set -g __mise_skip_first_prompt_pwd "$PWD"
if functions -q fish_command_not_found; and not functions -q __mise_fish_command_not_found
    functions -e __mise_fish_command_not_found
    functions -c fish_command_not_found __mise_fish_command_not_found
end

function fish_command_not_found
    if string match -qrv -- '^(?:mise$|mise-)' $argv[1] &&
        /some/dir/mise hook-not-found -s fish -- $argv[1]
        /some/dir/mise hook-env --status --shell-pid $fish_pid -s fish | source
    else if functions -q __mise_fish_command_not_found
        __mise_fish_command_not_found $argv
    else
        __fish_default_command_not_found_handler $argv
    end
end
