src/shell/snapshots/mise__shell__fish__tests__deactivate.snap
---
source: src/shell/fish.rs
expression: replace_path(&deactivate)
---
functions --erase __mise_env_eval
functions --erase __mise_env_eval_on_prompt
functions --erase __mise_env_eval_2
functions --erase __mise_cd_hook
functions --erase mise
set -e __mise_skip_first_prompt_pwd
set -e MISE_SHELL
set -e __MISE_DIFF
set -e __MISE_SESSION
set -e __MISE_LOOKUP_EXE
set -e __MISE_LOOKUP_ERROR
