src/shell/snapshots/mise__shell__fish__tests__hook_init.snap
---
source: src/shell/fish.rs
expression: "fish.activate(exe, \" --status\".into())"
---
fish_add_path -g /some/dir
set -gx MISE_SHELL fish
set -gx __MISE_ORIG_PATH $PATH

function mise
  if test (count $argv) -eq 0
    command /some/dir/mise
    return
  end

  set command $argv[1]
  set -e argv[1]

  if contains -- --help $argv
    command /some/dir/mise "$command" $argv
    return $status
  end

  switch "$command"
  case deactivate s shell
    # if help is requested, don't eval
    if contains -- -h $argv
      command /some/dir/mise "$command" $argv
    else if contains -- --help $argv
      command /some/dir/mise "$command" $argv
    else
      source (command /some/dir/mise "$command" $argv |psub)
    end
  case '*'
    command /some/dir/mise "$command" $argv
  end
end

function __mise_env_eval --on-event fish_prompt --description 'Update mise environment when changing directories';
    /some/dir/mise hook-env --status -s fish | source;

    if test "$mise_fish_mode" != "disable_arrow";
        function __mise_cd_hook --on-variable PWD --description 'Update mise environment when changing directories';
            if test "$mise_fish_mode" = "eval_after_arrow";
                set -g __mise_env_again 0;
            else;
                /some/dir/mise hook-env --status -s fish | source;
            end;
        end;
    end;
end;

function __mise_env_eval_2 --on-event fish_preexec --description 'Update mise environment when changing directories';
    if set -q __mise_env_again;
        set -e __mise_env_again;
        /some/dir/mise hook-env --status -s fish | source;
        echo;
    end;

    functions --erase __mise_cd_hook;
end;
function fish_command_not_found
    if /some/dir/mise hook-not-found -s fish $argv[1]
        /some/dir/mise hook-env --status -s fish | source
    else
        __fish_default_command_not_found_handler $argv
    end
end

