src/shell/snapshots/mise__shell__fish__tests__move_prepend_env.snap
---
source: src/shell/fish.rs
expression: "replace_path(&sh.move_prepend_env(\"PATH\", \"/some/dir:/2/dir\"))"
---
fish_add_path --global --move --path /some/dir
fish_add_path --global --move --path /2/dir
