src/shell/snapshots/mise__shell__fish__tests__prepend_env.snap
---
source: src/shell/fish.rs
expression: "replace_path(&sh.prepend_env(\"PATH\", \"/some/dir:/2/dir\"))"
---
set -gx PATH '/some/dir:/2/dir' $PATH

