src/shell/snapshots/mise__shell__fish__tests__prepend_path.snap
---
source: src/shell/fish.rs
expression: fish.prepend_path(&paths)
---
set -gx PATH /some/other/dir /some/dir $PATH

